--- a/config/config.example.yml
+++ b/config/config.example.yml
@@ -27,6 +27,8 @@ server:
 traefik:
     http_entrypoint: "web"
     https_entrypoint: "websecure"
+    # Set to true if using self-signed certificates for upstream services
+    insecure_skip_verify: false
 
 gerbil:
     start_port: 51820
