Improve CSRF protection and validate OIDC redirects

--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
         "@radix-ui/react-tooltip": "^1.2.7",
         "@react-email/components": "0.3.1",
         "@react-email/render": "^1.1.2",
+        "@react-email/tailwind": "1.2.1",
         "@simplewebauthn/browser": "^13.1.0",
         "@simplewebauthn/server": "^9.0.3",
-        "@react-email/tailwind": "1.2.1",
         "@tailwindcss/forms": "^0.5.10",
         "@tanstack/react-table": "8.21.3",
         "arctic": "^3.7.0",
@@ -69,6 +69,7 @@
         "cookies": "^0.9.1",
         "cors": "2.8.5",
         "crypto-js": "^4.2.0",
+        "csurf": "^1.2.2",
         "drizzle-orm": "0.44.2",
         "eslint": "9.31.0",
         "eslint-config-next": "15.3.5",
@@ -109,9 +110,9 @@
         "winston": "3.17.0",
         "winston-daily-rotate-file": "5.0.0",
         "ws": "8.18.3",
+        "yargs": "18.0.0",
         "zod": "3.25.76",
-        "zod-validation-error": "3.5.2",
-        "yargs": "18.0.0"
+        "zod-validation-error": "3.5.2"
     },
     "devDependencies": {
         "@dotenvx/dotenvx": "1.47.6",
@@ -135,7 +136,7 @@
         "@types/swagger-ui-express": "^4.1.8",
         "@types/ws": "8.18.1",
         "@types/yargs": "17.0.33",
-        "drizzle-kit": "0.31.4",
+        "drizzle-kit": "^0.18.1",
         "esbuild": "0.25.6",
         "esbuild-node-externals": "1.18.0",
         "postcss": "^8",
