--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
         "eslint-config-next": "15.3.5",
         "express": "4.21.2",
         "express-rate-limit": "7.5.1",
+        "rate-limit-redis": "^4.2.1",
+        "redis": "^4.6.7",
         "glob": "11.0.3",
         "helmet": "8.1.0",
         "http-errors": "2.0.0",
